--- a/centos7-minikube/provision/roles/minikube/templates/minikube.sh.j2
+++ b/centos7-minikube/provision/roles/minikube/templates/minikube.sh.j2
@@ -1,3 +1,6 @@
+#!/bin/bash
+# https://github.com/kubernetes/minikube/blob/master/docs/vmdriver-none.md
+
 export MINIKUBE_WANTUPDATENOTIFICATION=false
 export MINIKUBE_WANTREPORTERRORPROMPT=false
 export MINIKUBE_HOME="/home/{{ ansible_ssh_user }}"
